--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,6 +10,34 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
- *= require_self
+ //*= require_tree .
+ //*= require_self
  */
+@import "bootstrap";
+
+body{
+  background-color: #FAFAFA;
+}
+
+.identification-form{
+  margin: 0 0 0 auto;
+}
+.identification{
+  background: #fff;
+  width: 324px;
+  margin-left: 400px;
+   border: 1px solid black;
+  border-radius: 5px;
+}
+
+.pas span{
+  font-size: 14px;
+}
+//.actions input[type='submit']{
+//  border: 1px solid #343a40;
+//  background-color: #343a40;
+//  color: #1574ff;
+//}
+.width_puts_to_identification{
+  width: 219px;
+}
