--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,14 +1,19 @@
 <%- if controller_name != 'sessions' %>
   <%= link_to "Log in", new_session_path(resource_name) %><br />
+  <!--<%= link_to "Log in", new_session_path(resource_name) %>-->
 <% end %>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Sign up", new_registration_path(resource_name) %><br />
+  <!--<%= link_to "Sign up", new_registration_path(resource_name) %><br />-->
+  <!--<button type="button" class="ml-3 btn btn-outline-dark"><%= link_to "Sign up", new_registration_path(resource_name) %></button>-->
+  <%= link_to "Sign up", new_registration_path(resource_name), class: 'btn btn-primary ml-5 mt-2 mb-2' %><br>
 <% end %>
 
-<%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Forgot your password?", new_password_path(resource_name) %><br />
-<% end %>
+<!--<%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>-->
+  <!--<%= link_to "Forgot your password?", new_password_path(resource_name) %><br />-->
+  <!--<button type="button" class="ml-1 btn btn-outline-dark"> <%= link_to "Forgot your password?", new_password_path(resource_name) %></button>-->
+  <!--<button type="button" class="mb-1 ml-2" ><%= link_to "Forgot your password?", new_password_path(resource_name) %></button>-->
+<!--<% end %>-->
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
   <%= link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name) %><br />
