--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,18 +11,30 @@
 
   <body>
 
+  <nav class="navbar navbar-expand-lg navbar-gray bg-gray" style="background: dimgray">
+
+
+      <form class="identification-form form-inline my-2 my-lg-0 pull-right">
+
+          <% if user_signed_in? %>
+            <span>Здравствуйте, <%= current_user.email %></span>
+            <%= link_to 'Выйти', destroy_user_session_path, :method => :delete, class: 'btn btn-primary' %>
+          <% else %>
+            <%= link_to 'Войти', new_user_session_path, class: 'mr-2 btn btn-primary' %>
+            <%= link_to 'Зарегистрироваться', new_user_registration_path, class: 'btn btn-primary'%>
+          <% end %>
+
+      </form>
+  </nav>
+
+
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
-    <% if user_signed_in? %>
-      <span>Здравствуйте, <%= current_user.email %></span>
-      <%= link_to 'Выйти', destroy_user_session_path, :method => :delete %>
-    <% else %>
-      <%= link_to 'Войти', new_user_session_path %>
-      <%= link_to 'Зарегистрироваться', new_user_registration_path %>
-    <% end %>
+    <div class="container">
+      <%= yield %>
+    </div>
 
-  <%= yield %>
 
   </body>
 </html>
