--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,5 +1,5 @@
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Log in", new_session_path(resource_name) %><br />
+  <%= link_to "Log in", new_session_path(resource_name), class: 'btn btn-primary ml-5 mt-2 mb-2' %><br />
   <!--<%= link_to "Log in", new_session_path(resource_name) %>-->
 <% end %>
 
