--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,19 @@
 <%= render 'partials/post' %>
+
+<h2>Комментарии</h2>
+
+<%= form_for ([@post,Comment.new]) do |f| %>
+
+  <p>Текст комментария</p>
+  <%= f.text_area(:body) %>
+
+  <%= f.submit %>
+
+<% end %>
+
+<% @post.comments.each do |comment| %>
+
+  <p><%=comment.body%></p>
+  <p><%= comment.created_at.strftime("%H:%M:%S %d-%m-%Y") %></p>
+
+<% end %>
