--- a/app/views/partials/_post.html.erb
+++ b/app/views/partials/_post.html.erb
@@ -1,5 +1,6 @@
-<h1>Просмотр статьи </h1>
-<hr><br><br>
-
-<h2><%= @post.title %></h2>
-<p><%= @post.body %></p>
+<div class="card">
+  <div class="card-body">
+    <h2 class="card-title"><%= @post.title %></h2>
+    <p class="card-text"><%= @post.body %></p>
+  </div>
+</div>
