--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,43 +1,97 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- //*= require_tree .
- //*= require_self
- */
+
 @import "bootstrap";
 
 body{
-  background-color: #FAFAFA;
+  background-image: url(image_path('backgraund2.svg'));
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
 }
 
-.identification-form{
-  margin: 0 0 0 auto;
-}
-.identification{
-  background: #fff;
-  width: 324px;
-  margin-left: 400px;
-   border: 1px solid black;
-  border-radius: 5px;
-}
+
+
 
 .pas span{
   font-size: 14px;
 }
-//.actions input[type='submit']{
-//  border: 1px solid #343a40;
-//  background-color: #343a40;
-//  color: #1574ff;
-//}
+
 .width_puts_to_identification{
   width: 219px;
+}
+
+.card-header{
+  background-color: #fff;
+}
+
+.scroll_comments{
+  overflow: scroll;
+  height: 400px;
+}
+
+.text_post{
+  font-size: 15px;
+  font-family: monospace;
+  text-align: center;
+
+
+}
+.card_content{
+  width: 850px;
+}
+
+.link .link_a{
+  text-decoration: none;
+  color: #2F4F4F;
+  transition: 0.3s;
+}
+.link_a:hover{
+  color: #000;
+  transition: 0.1s;
+}
+
+.container_all_posts .all_posts{
+  text-decoration: none;
+  color: #fff;
+  font-size: 17px;
+  transition: 0.3s;
+}
+
+.all_posts:hover{
+  color: #000;
+  transition: 0.3s;
+}
+
+.identification{
+  height: 500px;
+}
+.indentification_content{
+  background-color: #fff;
+  margin-left: 35%;
+  width: 331px;
+  border-radius: 10px;
+}
+.indentification_content h4{
+  margin-left: 120px;
+}
+
+
+.aaa .sss{
+  text-decoration: none;
+
+}
+
+.text_post{
+  overflow: auto;
+  max-height: 300px;
+}
+
+.like{
+  color: 	#808080;
+  font-size: 25px;
+  transition: 0.3s;
+}
+
+.like:hover{
+  color: #B00100;
+  transition: 0.3s;
 }
