--- a/app/views/current_user/posts/_form.html.erb
+++ b/app/views/current_user/posts/_form.html.erb
@@ -1,7 +1,11 @@
-<%= form.label      :title %>
-<%= form.text_field :title, class: "form-control" %>
+<div class="card">
+  <div class="card-body">
+    <%= form.label      :title %>
+    <%= form.text_field :title, class: "form-control" %>
 
-<%= form.label      :body, class: "mt-3"  %>
-<%= form.text_field :body, class: "form-control" %>
+    <%= form.label      :body, class: "mt-3"  %>
+    <%= form.text_area :body, class: "form-control" %>
 
-<%= form.submit 'Сохранить', class: "btn btn-primary mt-4" %>
+    <%= form.submit 'Сохранить', class: "btn btn-primary mt-4" %>
+  </div>
+</div>
