--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,37 +1,39 @@
 <div class="identification">
 
-  <h2 class="ml-5">Sign up</h2>
+  <div class="indentification_content">
+    <h4 class="">Sign up</h4>
 
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
 
-    <div class="field pl-5">
-      <%= f.label :email %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control width_puts_to_identification', maxlength: 20 %>
-    </div>
+      <div class="field pl-5">
+        <%= f.label :email %><br />
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control width_puts_to_identification', maxlength: 20 %>
+      </div>
 
-    <div class="pas field pl-5">
-      <%= f.label :password %>
+      <div class="pas field pl-5">
+        <%= f.label :password %>
 
-      <span class="ml-4">
+        <span class="ml-4">
         <% if @minimum_password_length %>
          <em>(<%= @minimum_password_length %> characters minimum)</em>
         <% end %><br />
       </span>
 
-      <%= f.password_field :password, autocomplete: "new-password", class: 'form-control width_puts_to_identification', maxlength: 20 %>
-    </div>
+        <%= f.password_field :password, autocomplete: "new-password", class: 'form-control width_puts_to_identification', maxlength: 20 %>
+      </div>
 
-    <div class="field  pl-5">
-      <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control width_puts_to_identification', maxlength: 20 %>
-    </div>
+      <div class="field  pl-5">
+        <%= f.label :password_confirmation %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control width_puts_to_identification', maxlength: 20 %>
+      </div>
 
-    <div class="actions pl-5 pt-3">
-      <%= f.submit "Sign up", class: 'btn btn-primary' %>
-    </div>
-  <% end %>
+      <div class="actions pl-5 pt-3">
+        <%= f.submit "Sign up", class: 'btn btn-primary' %>
+      </div>
+    <% end %>
 
-  <%= render "devise/shared/links" %>
+    <%= render "devise/shared/links" %>
 
+  </div>
 </div>
