--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,10 +1,18 @@
-<h1>Статьи</h1>
-<hr> <br><br>
 
 <% @posts.each do |post| %>
 
-  <h2><%= link_to post.title, post_path(post) %></h2>
-  <p><%= post.body %></p>
-
+    <div class="container">
+      <div class="card ">
+        <div class="card-header link">
+          <h2><%= link_to post.title, post_path(post), class: 'link_a' %></h2>
+        </div>
+        <div class="card-body text_post">
+          <p><%= post.body %></p>
+        </div>
+      </div>
+      <%= link_to '<i class="fa fa-heart" aria-hidden="true"></i>'.html_safe, post_likes_path(post), method: :post, class: 'like', id: 'like' %>
+      <%=  post.likes.count %>
+    </div>
+    <br>
 
 <% end %>
